--- a/index.html
+++ b/index.html
@@ -31,8 +31,20 @@
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the array.
     // 🧠 As you have done in the past, declare a variable before you start looping, to accumulate the result.
     function sumNumsFor(nums) {
-
-    }
+      let arr = 0
+      for (let i = 0; i < nums.length; i++) {
+        let element = nums[i]
+        if (typeof element === 'number') {
+          if (element === 13) {
+            return "I'm too superstitious!"
+            break
+          }
+          arr += element
+        }
+      }
+      return arr
+}
+    
 
     // 👉 CHALLENGE 2
     // 🧠 The function stripVowels takes a string, strips all lowcase vowel letters (a,e,i,o,u) from it and returns it.
@@ -41,7 +53,15 @@
     // ❗ Notes:
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the characters of the string.
     function stripVowels(str) {
-
+      const separated = str.split('')
+      const result = []
+      for (let i = 0; i < separated.length; i++) {
+        const char = separated[i]
+        if (char !== 'a' && char !== 'e' && char !== 'i' && char !=='o' && char!== 'u') {
+          result.push(char)
+        }
+      } 
+      return result.join('')
     }
 
     // 👉 CHALLENGE 3
@@ -49,8 +69,20 @@
     // 🧠 Examples of usage:
     // sumNumsWhile([1, 2, 3]) // should return 6
     // sumNumsWhile([1, 2, 13]) // should return "I'm too superstitious!"
-    function sumNumsWhile() {
-
+    function sumNumsWhile(nums) {
+      let arr = 0
+      let index = 0
+      while (index < nums.length) {
+        element = nums[index]
+        if (typeof element === 'number') {
+          if (element === 13) {
+            return "I'm too superstitious!"
+          }
+          arr += element
+        }
+        index++
+      }
+      return arr
     }
 
     // 👉 CHALLENGE 4
@@ -70,8 +102,16 @@
     // 🧠 There are many ways to solve this, but practice using a while loop.
     // 🧠 Work out using pen and paper how the round number and the lifePoints change after each round.
     // 🧠 As long as there are lifePoints, decrease lifePoints by round number, and increase round number by one.
-    function fightMonsters() {
-
+    function fightMonsters(lifePoints) {
+      let round = 1
+      while(lifePoints > 0) {
+        lifePoints -= round
+        if (lifePoints <= 0) {
+          return `You died in round ${round}`
+        }
+        round++
+      }
+      
     }
 
     // 👉 CHALLENGE 5
@@ -81,8 +121,15 @@
     // findEvenNums([0, 1, 2, 3, 4]) // should return [0, 2, 4]
     // ❗ Notes:
     // 🧠 Use any kind of loop you'd like and the push method to populate the array of even numbers.
-    function findEvenNums() {
-
+    function findEvenNums(integers) {
+      let evenNumbers = []
+      for (let i in integers) {
+        let numbers = integers[i]
+        if (numbers % 2 === 0) {
+          evenNumbers.push(numbers)
+        }
+      }
+      return evenNumbers
     }
 
     // 👉 CHALLENGE 6
@@ -92,8 +139,18 @@
     // 🧠 Ages in the subarrays should appear in the same order they appeared in the original array.
     // 🧠 Examples of usage:
     // separateAges([31, 12, 25, 65, 84, 20]) // should return [[12, 20], [31, 25, 65, 84]]
-    function separateAges() {
-
+    function separateAges(ages) {
+      let firstSubArr = []
+      let secondSubArr = []
+      for (let i = 0; i < ages.length; i++) {
+        let myAges = ages[i]
+        if (myAges < 21) {
+          firstSubArr.push(myAges)
+        } else {
+          secondSubArr.push(myAges)
+        }
+      } 
+      return [firstSubArr, secondSubArr]
     }
 
     // 👉 CHALLENGE 7
@@ -103,7 +160,11 @@
     // 🧠 The "tail" prop contains an array holding the elements of the array after the first one.
     // 🧠 Examples of usage:
     // headAndTail([1, 2, 3]) // should return { head: 1, tail: [2, 3] }
-    function headAndTail() {
+    function headAndTail(arr) {
+      let head = arr[0]
+      let tail = arr.slice(1)
+      let obj = {head, tail}
+      return obj
 
     }
 
@@ -114,9 +175,24 @@
     // nestedLoops(['hello', 'goodbye']) // should return ['hEllO', 'gOOdbyE']
     // ❗ Notes:
     // 🧠 To capitalize a string you can use its toUpperCase method: "a".toUpperCase() returns "A"
-    function nestedLoops() {
-
+    function nestedLoops(strings) {
+      let newArray = []
+      for (let i in strings) {
+        let newWords = strings[i]
+        let myChangedWord = ''
+        for (let i in newWords) {
+          let char = newWords[i]
+          if (char === 'a' || char === 'e' || char === 'i' || char === 'o' || char === 'u') {
+            let capitalized = char.toUpperCase()
+            myChangedWord += capitalized
+          } else {
+            myChangedWord += char
+          }
+      } 
+      newArray.push(myChangedWord)
     }
+    return newArray
+  }
 
     // 👉 CHALLENGE 9
     // 🧠 The function crazyTrimmer takes an array as its argument.
@@ -129,8 +205,13 @@
     // 🧠 Practice using pop and slice.
     // 🧠 Note that pop modifies the original array in place and returns the "popped" element, whereas slice gives us a brand new array.
     function crazyTrimmer(arr) {
-
-    }
+        if (arr.length % 2 === 0) {
+          arr.pop()
+          return arr
+        } else {
+          return arr.slice(1, arr.length -1)
+        }
+  }
 
     // 🧪 TESTS, do not work below this line
     // 🧪 TESTS, do not work below this line
